--- a/contact.ejs
+++ b/contact.ejs
@@ -1,11 +1,11 @@
 <html>
 <head>
-<link href="/assets/styles.css" rel="stylesheet" type="text/css"/>
+<link href="styles.css" rel="stylesheet" type="text/css"/>
 
 </head>
 
 <body>
-	<%- include('partials/nav'); %>
+	<%- include('nav'); %>
 <h1> Contact ALEXANDER GYUROV   </h1>
 <p> 89060339919</p>
 <p> <%= qs.dept %></p>
