--- a/profile.ejs
+++ b/profile.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<%- include('partials/nav'); %>
+<%- include('nav'); %>
 <h1> ! ! ! Welcome to the profile of <%= person %></h1>
 <p> <strong> Age:  </strong> <%= data.age %></p>
 <p> <strong> Job:  </strong> <%= data.job %></p>
