--- a/profile.ejs
+++ b/profile.ejs
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-<link href="/assets/styles.css" rel="stylesheet" type="text/css"/>
+<link href="/my-first-javascript/styles.css" rel="stylesheet" type="text/css"/>
 
 </head>
 
