--- a/index.ejs
+++ b/index.ejs
@@ -14,7 +14,7 @@ p{font-size: 16px; text-align: center}
 </head>
 
 <body>
-	<%- include('partials/nav'); %>
+	<%- include('my-first-javascript/nav'); %>
 <h1> ! ! ! Welcome to the WEBSITE of ALEXANDER GYUROV ! ! ! </h1>
 <p> you wont regret visitiing my site</p>
 
